feat: make CORS allowed origins configurable via environment variable